# StereoMatching

./: 2018-4-16-StereoMatching.md  CMakeLists.txt  opencvsgbm.cpp  立体匹配报告.docx
Examples/cones/: cpp-example-stereo_match  sgm
Examples/teddy/: SGM-Census
coding/: pcl.cpp  readBinocularImage.cpp  viz.cpp  zed.cpp
coding/Binocular_Calibration/: Binocular_Calibration.cpp  CMakeLists.txt  CalibrationResult.txt  CalibrationResult.yml  leftCalibrationResult.txt
coding/Binocular_Calibration/Calibration_left_right_pic/Calibration_left_pic/: leftname.txt
coding/Binocular_Calibration/Calibration_left_right_pic/Calibration_right_pic/: rightname.txt
coding/readLeftRightImage/: CMakeLists.txt
coding/readLeftRightImage/Calibration_left_pic/: leftname.txt
coding/readLeftRightImage/Calibration_right_pic/: rightname.txt
