cmake_minimum_required(VERSION 2.8) 
project( Binocular_Calibration )
find_package( OpenCV REQUIRED ) 
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -msse4.2 -std=c++11")
add_executable( Binocular_Calibration Binocular_Calibration.cpp )
target_link_libraries( Binocular_Calibration ${OpenCV_LIBS} )
